--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.leandroborgesferreira:loading-button-android:2.3.0'
     implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
-    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
