--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'io.github.chaosleung:pinview:1.4.4'
+    implementation 'com.github.GrenderG:Toasty:1.5.2'
 }
