--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,18 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
+                android:name=".ListPetActivity"
+                android:theme="@style/AppTheme.FullScreen"
+                android:screenOrientation="portrait"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
                 android:name=".otp.OtpActivity"
+                android:theme="@style/AppTheme.FullScreen"
+                android:screenOrientation="portrait"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
@@ -28,6 +39,8 @@
         </activity>
         <activity
                 android:name=".adoption.AdoptionActivity"
+                android:theme="@style/AppTheme.FullScreen"
+                android:screenOrientation="portrait"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
@@ -35,6 +48,8 @@
         </activity>
         <activity
                 android:name=".login.LoginActivity"
+                android:theme="@style/AppTheme.FullScreen"
+                android:screenOrientation="portrait"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
@@ -42,6 +57,8 @@
         </activity>
         <activity
                 android:name=".login.RegisterActivity"
+                android:theme="@style/AppTheme.FullScreen"
+                android:screenOrientation="portrait"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
@@ -49,6 +66,7 @@
         </activity>
         <activity
                 android:name=".splash.SplashScreen"
+                android:theme="@style/AppTheme.FullScreen"
                 android:exported="true"
                 android:screenOrientation="portrait">
             <intent-filter>
@@ -59,6 +77,7 @@
         </activity>
         <activity
                 android:name=".MainActivity"
+                android:theme="@style/AppTheme.FullScreen"
                 android:screenOrientation="portrait"/>
 
         <meta-data
