--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'io.github.chaosleung:pinview:1.4.4'
     implementation 'com.github.GrenderG:Toasty:1.5.2'
+    implementation 'com.android.volley:volley:1.2.1'
 }
