--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,56 +19,57 @@
             android:theme="@style/Theme.SahipsizKahramanlar"
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
+
         <activity
                 android:name=".pet.ListPetActivity"
-                android:theme="@style/AppTheme.FullScreen"
+                android:exported="false"
                 android:screenOrientation="portrait"
-                android:exported="false">
+                android:theme="@style/AppTheme.FullScreen">
             <meta-data
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
         <activity
                 android:name=".otp.OtpActivity"
-                android:theme="@style/AppTheme.FullScreen"
+                android:exported="false"
                 android:screenOrientation="portrait"
-                android:exported="false">
+                android:theme="@style/AppTheme.FullScreen">
             <meta-data
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
         <activity
                 android:name=".adoption.AdoptionActivity"
-                android:theme="@style/AppTheme.FullScreen"
+                android:exported="false"
                 android:screenOrientation="portrait"
-                android:exported="false">
+                android:theme="@style/AppTheme.FullScreen">
             <meta-data
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
         <activity
                 android:name=".login.LoginActivity"
-                android:theme="@style/AppTheme.FullScreen"
+                android:exported="false"
                 android:screenOrientation="portrait"
-                android:exported="false">
+                android:theme="@style/AppTheme.FullScreen">
             <meta-data
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
         <activity
                 android:name=".login.RegisterActivity"
-                android:theme="@style/AppTheme.FullScreen"
+                android:exported="false"
                 android:screenOrientation="portrait"
-                android:exported="false">
+                android:theme="@style/AppTheme.FullScreen">
             <meta-data
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
         <activity
                 android:name=".splash.SplashScreen"
-                android:theme="@style/AppTheme.FullScreen"
                 android:exported="true"
-                android:screenOrientation="portrait">
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -77,8 +78,8 @@
         </activity>
         <activity
                 android:name=".MainActivity"
-                android:theme="@style/AppTheme.FullScreen"
-                android:screenOrientation="portrait"/>
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.FullScreen"/>
 
         <meta-data
                 android:name="android.app.lib_name"
