--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
                 android:name=".login.LoginActivity"
                 android:exported="false"
                 android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize"
                 android:theme="@style/AppTheme.FullScreen">
             <meta-data
                     android:name="android.app.lib_name"
@@ -60,6 +61,7 @@
                 android:name=".login.RegisterActivity"
                 android:exported="false"
                 android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize"
                 android:theme="@style/AppTheme.FullScreen">
             <meta-data
                     android:name="android.app.lib_name"
